[gd_scene load_steps=14 format=3 uid="uid://cxjpvcv7qi46v"]

[ext_resource type="Script" uid="uid://crhk827lho5kf" path="res://props/checkpoint_flag/flag.gd" id="1_3h7g4"]
[ext_resource type="Shader" uid="uid://dj08im61o7svw" path="res://props/checkpoint_flag/flag.gdshader" id="2_7knrb"]
[ext_resource type="Material" uid="uid://cs1n50is125v" path="res://props/checkpoint_flag/flag_material_2.tres" id="3_t8fwv"]
[ext_resource type="FontFile" uid="uid://cjwtskrde6shl" path="res://assets/fonts/montserrat_extra_bold.ttf" id="4_v7dg7"]
[ext_resource type="AudioStream" uid="uid://d05y3bkiqsmxh" path="res://props/checkpoint_flag/zapsplat_multimedia_game_sound_finish_complete_success_bright_warm_synth_001_60688.mp3" id="5_efkp8"]

[sub_resource type="FastNoiseLite" id="1"]

[sub_resource type="NoiseTexture2D" id="2"]
seamless = true
noise = SubResource("1")

[sub_resource type="ShaderMaterial" id="3"]
render_priority = 0
shader = ExtResource("2_7knrb")
shader_parameter/wave_size = 1.0
shader_parameter/face_distortion = 0.5
shader_parameter/time_scale = Vector2(0.3, 0)
shader_parameter/uv_offset_scale = Vector2(-0.2, -0.1)
shader_parameter/uv_offset_texture = SubResource("2")

[sub_resource type="PlaneMesh" id="4"]
material = SubResource("3")
size = Vector2(3.2, 2)
subdivide_width = 32
subdivide_depth = 32

[sub_resource type="PlaneMesh" id="PlaneMesh_oss8i"]
material = ExtResource("3_t8fwv")
size = Vector2(3.2, 2)
subdivide_width = 32
subdivide_depth = 32

[sub_resource type="StandardMaterial3D" id="5"]
albedo_color = Color(0.709804, 0.713726, 0.760784, 1)
metallic = 0.56
metallic_specular = 0.24
roughness = 0.63

[sub_resource type="CylinderMesh" id="6"]
material = SubResource("5")
top_radius = 0.1
bottom_radius = 0.1
height = 4.105

[sub_resource type="SphereShape3D" id="SphereShape3D_agi8s"]
radius = 10.0

[node name="CheckpointFlag" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79311, 0)
script = ExtResource("1_3h7g4")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.6, 4.2, 0)

[node name="Flag" type="MeshInstance3D" parent="Pivot"]
transform = Transform3D(1.2, 0, 0, 0, -1.95505e-07, -1.2, 0, 1, -1.62921e-07, 1.93751, 0.0499997, 0)
mesh = SubResource("4")

[node name="Flag2" type="MeshInstance3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, -1.95505e-07, -1.2, 0, 1, -1.62921e-07, 0.338, -3.2, 0)
visible = false
mesh = SubResource("PlaneMesh_oss8i")

[node name="Pole" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.8, 0, 0, 0, 1, -1.6, 1.82459, 0)
mesh = SubResource("6")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0)
pixel_size = 0.01
billboard = 2
text = "CHECKPOINT"
font = ExtResource("4_v7dg7")
font_size = 80

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_agi8s")

[node name="VisibilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.6, 4.3, 0)
stream = ExtResource("5_efkp8")
volume_db = 30.0
bus = &"Sound"

[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="VisibilityTimer" to="." method="_on_visibility_timer_timeout"]
